# example_rules_python

./: .gitignore  WORKSPACE.bazel
tools/: BUILD.bazel  main.py
