load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "c68bdc4fbec25de5b5493b8819cfc877c4ea299c0dcb15c244c5a00208cde311",
    strip_prefix = "rules_python-0.31.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.31.0/rules_python-0.31.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

#
# From: https://github.com/bazelbuild/rules_python/tree/main/examples/pip_parse
#
load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python_3_9",
    python_version = "3.9.13",
)

load("@rules_python//python:pip.bzl", "pip_parse")
pip_parse(
    name = "pypi",
    python_interpreter_target = "@python_3_9_host//:python",
    quiet = False,  # verbose pip output
    requirements_lock = "//tools:requirements_lock.txt",
    #requirements_windows = "//tools:requirements_windows.txt",
)

load("@pypi//:requirements.bzl", "install_deps")

# Initialize repositories for all packages in requirements_lock.txt.
install_deps()
