load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        "@pypi//requests:pkg",
    ],
)

# This rule adds a convenient way to update the requirements file.
compile_pip_requirements(
    name = "requirements",
    src = "//tools:requirements.in",
    requirements_txt = "//tools:requirements_lock.txt",
    requirements_windows = "//tools:requirements_windows.txt",
)
